src/sass/imagecrop.scss
$border-color: #fff;

.imgc {
  position: relative;
  display: inline-block;
  user-select: none;

  canvas {
    display: none;
  }
}

.imgc svg,
.imgc img {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
}

.imgc-handles {
  position: absolute;
  top: 50%;
  left: 50%;
  cursor: move;
}

*[class^='imgc-handles-el-'] {
  position: absolute;
  display: inline-block;
  z-index: 1;
  background: transparent;
}

*[class^='imgc-handles-el-0-'] {
  width: 12px;
  height: 12px;
  z-index: 2;
  background: $border-color;
  border-radius: 50%;
}

.imgc-handles-el-0-0 {
  top: -6px;
  left: -6px;
  cursor: nw-resize;
}

.imgc-handles-el-0-1 {
  top: -6px;
  right: -6px;
  cursor: ne-resize;
}

.imgc-handles-el-0-2 {
  bottom: -6px;
  right: -6px;
  cursor: se-resize;
}

.imgc-handles-el-0-3 {
  bottom: -6px;
  left: -6px;
  cursor: sw-resize;
}

.imgc-handles-el-1-0,
.imgc-handles-el-1-2 {
  height: 8px;
  width: 100%;
  left: 0;
  right: 0;
}

.imgc-handles-el-1-1,
.imgc-handles-el-1-3 {
  height: 100%;
  width: 8px;
  top: 0;
  bottom: 0;
}

.imgc-handles-el-1-0 {
  top: -8px;
  cursor: n-resize;
  border-bottom: 1px solid $border-color;
}

.imgc-handles-el-1-1 {
  right: -8px;
  cursor: e-resize;
  border-left: 1px solid $border-color;
}

.imgc-handles-el-1-2 {
  bottom: -8px;
  cursor: s-resize;
  border-top: 1px solid $border-color;
}

.imgc-handles-el-1-3 {
  left: -8px;
  cursor: w-resize;
  border-right: 1px solid $border-color;
}

